fix table css spacing

--- a/eNMS/static/css/main.css
+++ b/eNMS/static/css/main.css
@@ -600,13 +600,6 @@ legend {
   background-color: #ffff !important;
 }
 
-form:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-}
-
 fieldset {
   border: none;
   margin: 0;
